Simplify process pool